objects/Application_SFDC2__c.object
<CustomObject>
    <description>SFDC2: Used to capture Application data from external systems</description>
    <fields>
        <fullName>APR_Variance__c</fullName>
        <label>APR Variance</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Id__c</fullName>
        <description>Unique identifier for approved financial account</description>
        <label>Account Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type_Code__c</fullName>
        <description>Account Type Code</description>
        <label>Account Type Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type_Id__c</fullName>
        <description>Account Type Id</description>
        <label>Account Type Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allow_Direct_Mail__c</fullName>
        <description>Whether the business allows direct mail solicitation</description>
        <label>Allow Direct Mail</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allow_Email_Solicit__c</fullName>
        <description>Whether the business allows email solicitation</description>
        <label>Allow Email Solicit</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allow_Share_Info__c</fullName>
        <description>Whether the business will allow its information to be shared</description>
        <label>Allow Share Info</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allow_Telemarket__c</fullName>
        <description>Whether the business allows telemarketing</description>
        <label>Allow Telemarket</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Source__c</fullName>
        <formula>IF(RecordType.DeveloperName =&quot;Andera&quot;, &quot;Andera&quot;, IF(RecordType.DeveloperName =&quot;Enrollment&quot;,&quot;Enrollment&quot;,IF(RecordType.DeveloperName =&quot;TCI&quot;,&quot;TCI&quot;,IF(RecordType.DeveloperName =&quot;MeridianLink&quot;,&quot;MeridianLink&quot;,Null))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_State__c</fullName>
        <description>Progress of Application</description>
        <label>Application State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Status__c</fullName>
        <description>Status of Application</description>
        <label>Application Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Total__c</fullName>
        <description>Count of Applications</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used to sum or count the number of Applications</inlineHelpText>
        <label>Application Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Application_Type__c</fullName>
        <description>Type or type code of application</description>
        <label>Application Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_id__c</fullName>
        <description>Unique identifier for application</description>
        <externalId>true</externalId>
        <label>Application Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Approval_Date__c</fullName>
        <label>Approval Date</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Officer_Code__c</fullName>
        <description>Approval Officer Code</description>
        <label>Approval Officer Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Officer_Email__c</fullName>
        <description>Approval Officer Email</description>
        <label>Approval Officer Email</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Officer_Id__c</fullName>
        <description>Approval Officer Id</description>
        <label>Approval Officer Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Officer_Name__c</fullName>
        <description>Approval Officer Name</description>
        <label>Approval Officer Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Officer_Phone__c</fullName>
        <description>Approval Officer Phone</description>
        <label>Approval Officer Phone</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved__c</fullName>
        <description>Whether or not approved</description>
        <label>Approved</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Boarding_Status__c</fullName>
        <description>Boarding status</description>
        <label>Boarding Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking_Officer_Code__c</fullName>
        <description>Booking Officer Code</description>
        <label>Booking Officer Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking_Officer_Email__c</fullName>
        <description>Booking Officer Email</description>
        <label>Booking Officer Email</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking_Officer_Id__c</fullName>
        <description>Booking Officer Id</description>
        <label>Booking Officer Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking_Officer_Name__c</fullName>
        <description>Booking Officer Name</description>
        <label>Booking Officer Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking_Officer_Phone__c</fullName>
        <description>Booking Officer Phone</description>
        <label>Booking Officer Phone</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch_Number__c</fullName>
        <description>Bank branch identifier</description>
        <label>Branch Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <description>Bank branch</description>
        <label>Branch</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_City__c</fullName>
        <description>Business City</description>
        <label>Business City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Country__c</fullName>
        <description>Business Country</description>
        <label>Business Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Email__c</fullName>
        <description>Business Email</description>
        <label>Business Email</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Mailing_Address__c</fullName>
        <description>Business Mailing Address</description>
        <label>Business Mailing Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Mailing_City__c</fullName>
        <description>Business Mailing City</description>
        <label>Business Mailing City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Mailing_Country__c</fullName>
        <description>Business Mailing Country</description>
        <label>Business Mailing Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Mailing_State__c</fullName>
        <description>Business Mailing State</description>
        <label>Business Mailing State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Mailing_Zip_Code__c</fullName>
        <description>Business Mailing Zip Code</description>
        <label>Business Mailing Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Main_Phone__c</fullName>
        <description>Business Main Phone</description>
        <label>Business Main Phone</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Name__c</fullName>
        <description>Business Name</description>
        <label>Business Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_State__c</fullName>
        <description>Business State</description>
        <label>Business State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Zip_Code__c</fullName>
        <description>Business Zip Code</description>
        <label>Business Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Buy_Rate__c</fullName>
        <description>Rate offered by loan officer</description>
        <label>Buy Rate</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calculated_Rate__c</fullName>
        <label>Calculated Rate</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Additional comments</description>
        <label>Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <description>Date application completed</description>
        <label>Completed Date</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completed_Time__c</fullName>
        <description>Time application completed</description>
        <label>Completed Time</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Confirmation_Number__c</fullName>
        <description>Customer confirmation number</description>
        <label>Confirmation Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Date__c</fullName>
        <description>Date contract signed</description>
        <label>Contract Date</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Rate__c</fullName>
        <description>Rate of contract</description>
        <label>Contract Rate</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <description>Date application created</description>
        <label>Created Date</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DTI__c</fullName>
        <description>Debt to income ratio</description>
        <label>DTI</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_City__c</fullName>
        <label>Dealer City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Contact_Name__c</fullName>
        <label>Dealer Contact Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Contact_Phone__c</fullName>
        <label>Dealer Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Dealer_Id__c</fullName>
        <label>Dealer Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Name__c</fullName>
        <description>Auto Dealer Name</description>
        <label>Dealer Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Reserve__c</fullName>
        <description>Flat dollar amount paid to dealers</description>
        <label>Dealer Reserve</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_State__c</fullName>
        <label>Dealer State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Street_Address__c</fullName>
        <label>Dealer Street Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Type__c</fullName>
        <description>Type of dealer</description>
        <label>Dealer Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Zip_code__c</fullName>
        <label>Dealer Zip code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deciding_Officer_Code__c</fullName>
        <description>Deciding Officer Code</description>
        <label>Deciding Officer Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deciding_Officer_Email__c</fullName>
        <description>Deciding Officer Email</description>
        <label>Deciding Officer Email</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deciding_Officer_Id__c</fullName>
        <description>Deciding Officer Id</description>
        <label>Deciding Officer Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deciding_Officer_Name__c</fullName>
        <description>Deciding Officer Name</description>
        <label>Deciding Officer Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deciding_Officer_Phone__c</fullName>
        <description>Deciding Officer Phone</description>
        <label>Deciding Officer Phone</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Decision_Date__c</fullName>
        <description>Date decision on application was reached</description>
        <label>Decision Date</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Decision_Reason__c</fullName>
        <description>Reason for decision</description>
        <label>Decision Reason</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Decision_Status__c</fullName>
        <description>Decision status of application</description>
        <label>Decision Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Declined_Date__c</fullName>
        <label>Declined Date</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direct_Deposit__c</fullName>
        <description>Whether or not direct deposit was established</description>
        <label>Direct Deposit</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Established_Date__c</fullName>
        <description>Date business was established</description>
        <label>Established Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Existing_Account__c</fullName>
        <description>Existing account number</description>
        <label>Existing Account</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <description>Fax number</description>
        <label>Fax</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fee_Amount__c</fullName>
        <label>Fee Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fee_Type__c</fullName>
        <label>Fee Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Payment_Date__c</fullName>
        <label>First Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Funded_Amount_Financed__c</fullName>
        <description>Loan amount financed on funded loans</description>
        <label>Funded Amount Financed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Funded_Date__c</fullName>
        <description>Date loan funded</description>
        <label>Funded Date</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funded_Maturity_Date__c</fullName>
        <description>Date of loan maturity</description>
        <label>Funded Maturity Date</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funded_Term__c</fullName>
        <description>Written loan term on contract on funded loans</description>
        <label>Funded Term</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funded_Vehicle_VIN__c</fullName>
        <description>VIN number of vehicle funded</description>
        <label>Funded Vehicle VIN #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funded_Vehicle_Value__c</fullName>
        <description>Value of vehicle funded</description>
        <label>Funded Vehicle Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Funded_Vehicle_Year__c</fullName>
        <description>Year of vehicle funded</description>
        <label>Funded Vehicle Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funded__c</fullName>
        <description>Whether or not funded</description>
        <label>Funded</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funding_ACH_Routing_Number__c</fullName>
        <description>ACH routing number of funding account</description>
        <label>Funding ACH Routing Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funding_Account_Type__c</fullName>
        <description>Type of funding account</description>
        <label>Funding Account Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funding_Amount__c</fullName>
        <description>Amount applicant indicated the account would be funded with</description>
        <label>Funding Amount</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funding_Date__c</fullName>
        <label>Funding Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Funding_Name_on_Account__c</fullName>
        <description>Name on funding account</description>
        <label>Funding Name on Account</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funding_Status__c</fullName>
        <description>Status of loan funding</description>
        <label>Funding Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funding_Type__c</fullName>
        <description>How the applicant indicated the account would be funded</description>
        <label>Funding Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Ordered_Card__c</fullName>
        <description>Whether the applicant has ordered a bank card</description>
        <label>Has Ordered Card</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Ordered_Checks__c</fullName>
        <description>Whether the applicant has ordered checks</description>
        <label>Has Ordered Checks</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id_Verification_Result__c</fullName>
        <description>Status of id verification</description>
        <label>Id Verification Result</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Current_Business_Mailing_Address__c</fullName>
        <description>Is Current Business Mailing Address?</description>
        <label>Is Current Business Mailing Address?</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Third_Party__c</fullName>
        <description>Whether this is a third party application</description>
        <label>Is Third Party?</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LTV__c</fullName>
        <description>Loan to value</description>
        <label>LTV</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Id__c</fullName>
        <description>Loan Id</description>
        <label>Loan Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Info_Account_Position__c</fullName>
        <description>Account Position for Loan Info</description>
        <label>Loan Info Account Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Info_Approval_Date__c</fullName>
        <description>Approval Date for Loan Info</description>
        <label>Loan Info Approval Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Loan_Info_Booking_Date__c</fullName>
        <description>Booking Date for Loan Info</description>
        <label>Loan Info Booking Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Loan_Info_Create_Date__c</fullName>
        <description>Create Date for Loan Info</description>
        <label>Loan Info Create Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Loan_Info_Entity_Type__c</fullName>
        <description>Entity Type for Loan Info</description>
        <label>Loan Info Entity Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Info_Is_Claimed__c</fullName>
        <description>Is Claimed for Loan Info</description>
        <label>Loan Info Is Claimed?</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Info_Is_Lender_Disclosure_Checked__c</fullName>
        <description>Is Lender Disclosure Checked for Loan Info</description>
        <label>Loan Info Is Lender Disclosure Checked?</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Info_Is_Locked__c</fullName>
        <description>Is Locked for Loan Info</description>
        <label>Loan Info Is Locked?</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Info_Is_Minor__c</fullName>
        <description>Is Minor for Loan Info</description>
        <label>Loan Info Is Minor?</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Info_Is_New_Customer__c</fullName>
        <description>Is New Customer for Loan Info</description>
        <label>Loan Info Is New Customer?</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Info_Is_Possible_Dupe__c</fullName>
        <description>Is Possible Dupe for Loan Info</description>
        <label>Loan Info Is Possible Dupe?</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Info_Last_Modified__c</fullName>
        <description>Last Modified for Loan Info</description>
        <label>Loan Info Last Modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Loan_Info_Status__c</fullName>
        <description>Status for Loan Info</description>
        <label>Loan Info Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Info_Submit_Date__c</fullName>
        <description>Submit Date for Loan Info</description>
        <label>Loan Info Submit Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Loan_Number__c</fullName>
        <description>Loan account number</description>
        <label>Loan Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Officer_Code__c</fullName>
        <description>Loan Officer Code</description>
        <label>Officer Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Officer_Email__c</fullName>
        <description>Loan Officer Email</description>
        <label>Officer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Loan_Officer_ID__c</fullName>
        <description>Loan Officer ID</description>
        <label>Officer ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Officer_Name__c</fullName>
        <description>Loan Officer Name</description>
        <label>Officer Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Officer_Phone__c</fullName>
        <description>Loan Officer Phone</description>
        <label>Officer Phone</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Table__c</fullName>
        <description>JH master table type (CD, DD, LN)</description>
        <label>Master Table</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Number__c</fullName>
        <description>Business Meridian Link membership number</description>
        <label>Member Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Payment__c</fullName>
        <label>Monthly Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Netbank_Referral__c</fullName>
        <description>Whether or not the applicant was referred to NetBank</description>
        <label>Netbank Referral</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Used__c</fullName>
        <description>New or used car purchase</description>
        <label>New/Used</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Officer_Name__c</fullName>
        <description>Officer Name</description>
        <label>Officer Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Application_Id__c</fullName>
        <description>Reference to previous application id if applicant was referred to NetBank</description>
        <label>Original Application Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Originator_Code__c</fullName>
        <description>Originator Code</description>
        <label>Originator Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Originator_Email__c</fullName>
        <description>Originator Email</description>
        <label>Originator Email</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Originator_Id__c</fullName>
        <description>Originator Id</description>
        <label>Originator Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Originator_Name__c</fullName>
        <description>Originator Name</description>
        <label>Originator Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Originator_Phone__c</fullName>
        <description>Originator Phone</description>
        <label>Originator Phone</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Amount__c</fullName>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <description>Method used to fund account</description>
        <label>Payment Method</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payoff__c</fullName>
        <label>Payoff</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Class_Name__c</fullName>
        <description>Product Class (Savings, Money Market, Time Deposit, Checking)</description>
        <label>Product Class Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <description>Financial product code</description>
        <label>Product Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <description>Financial product</description>
        <label>Product</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promo_Code__c</fullName>
        <description>Promotional code used on application</description>
        <label>Promo Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Sheet_Rate__c</fullName>
        <label>Rate Sheet Rate</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <description>Rate of loan based on rate sheet</description>
        <label>Rate</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Source__c</fullName>
        <description>Where the applicant was referred from</description>
        <label>Referral Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referred_By__c</fullName>
        <description>By whom the applicant was referred</description>
        <label>Referred By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Region of Application</description>
        <label>Region</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Account_SFDC2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Remaining_Payoff__c</fullName>
        <label>Remaining Payoff</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Requested_Amount__c</fullName>
        <description>Requested loan amount</description>
        <label>Requested Amount</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <description>Application source</description>
        <label>Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submitted_Date__c</fullName>
        <description>Date application submitted</description>
        <label>Submitted Date</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_ID__c</fullName>
        <description>Tax Id</description>
        <label>Tax ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <description>Length of loan requested</description>
        <label>Term</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Accounts__c</fullName>
        <description>Total number of accounts with the bank</description>
        <label>Total Accounts</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Payments__c</fullName>
        <label>Total Payments</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trade_In_Vehicle_ID__c</fullName>
        <label>Trade In Vehicle ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
</CustomObject>